--- a/frontend/src/components/pages/login/style.css
+++ b/frontend/src/components/pages/login/style.css
@@ -1,6 +1,4 @@
 .login {
-    height: 90vh;
-
     display: flex;
     justify-content: center;
     align-items: center;
